Changelog
=========

1.0dev (Unreleased)
-------------------

- Fix regex for 5min endpoint.

1.0a (2012-01-02)
-----------------

- Initial release